--- a/main.ipynb
+++ b/main.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -576,19 +576,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Collecting pyngrok\n",
       "  Downloading pyngrok-7.1.6-py3-none-any.whl.metadata (7.4 kB)\n",
-      "Requirement already satisfied: PyYAML>=5.1 in c:\\users\\saga397\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pyngrok) (6.0.1)\n",
+      "Collecting PyYAML>=5.1 (from pyngrok)\n",
+      "  Using cached PyYAML-6.0.1-cp312-cp312-win_amd64.whl.metadata (2.1 kB)\n",
       "Downloading pyngrok-7.1.6-py3-none-any.whl (22 kB)\n",
-      "Installing collected packages: pyngrok\n",
-      "Successfully installed pyngrok-7.1.6\n"
+      "Using cached PyYAML-6.0.1-cp312-cp312-win_amd64.whl (138 kB)\n",
+      "Installing collected packages: PyYAML, pyngrok\n",
+      "Successfully installed PyYAML-6.0.1 pyngrok-7.1.6\n"
      ]
     }
    ],
@@ -605,7 +608,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Authtoken saved to configuration file: C:\\Users\\SaGa397\\AppData\\Local/ngrok/ngrok.yml\n"
+      "Downloading ngrok ...\n",
+      "Downloading ngrok: 0%\n",
+      "Downloading ngrok: 1%\n",
+      "Downloading ngrok: 2%\n",
+      "Downloading ngrok: 3%\n",
+      "Downloading ngrok: 4%\n",
+      "Downloading ngrok: 5%\n",
+      "Downloading ngrok: 6%\n",
+      "Downloading ngrok: 7%\n",
+      "Downloading ngrok: 8%\n",
+      "Downloading ngrok: 9%\n",
+      "Downloading ngrok: 10%\n",
+      "Downloading ngrok: 11%\n",
+      "Downloading ngrok: 12%\n",
+      "Downloading ngrok: 13%\n",
+      "Downloading ngrok: 14%\n",
+      "Downloading ngrok: 15%\n",
+      "Downloading ngrok: 16%\n",
+      "Downloading ngrok: 17%\n",
+      "Downloading ngrok: 18%\n",
+      "Downloading ngrok: 19%\n",
+      "Downloading ngrok: 20%\n",
+      "Downloading ngrok: 21%\n",
+      "Downloading ngrok: 22%\n",
+      "Downloading ngrok: 23%\n",
+      "Downloading ngrok: 24%\n",
+      "Downloading ngrok: 25%\n",
+      "Downloading ngrok: 26%\n",
+      "Downloading ngrok: 27%\n",
+      "Downloading ngrok: 28%\n",
+      "Downloading ngrok: 29%\n",
+      "Downloading ngrok: 30%\n",
+      "Downloading ngrok: 31%\n",
+      "Downloading ngrok: 32%\n",
+      "Downloading ngrok: 33%\n",
+      "Downloading ngrok: 34%\n",
+      "Downloading ngrok: 35%\n",
+      "Downloading ngrok: 36%\n",
+      "Downloading ngrok: 37%\n",
+      "Downloading ngrok: 38%\n",
+      "Downloading ngrok: 39%\n",
+      "Downloading ngrok: 40%\n",
+      "Downloading ngrok: 41%\n",
+      "Downloading ngrok: 42%\n",
+      "Downloading ngrok: 43%\n",
+      "Downloading ngrok: 44%\n",
+      "Downloading ngrok: 45%\n",
+      "Downloading ngrok: 46%\n",
+      "Downloading ngrok: 47%\n",
+      "Downloading ngrok: 48%\n",
+      "Downloading ngrok: 49%\n",
+      "Downloading ngrok: 50%\n",
+      "Downloading ngrok: 51%\n",
+      "Downloading ngrok: 52%\n",
+      "Downloading ngrok: 53%\n",
+      "Downloading ngrok: 54%\n",
+      "Downloading ngrok: 55%\n",
+      "Downloading ngrok: 56%\n",
+      "Downloading ngrok: 57%\n",
+      "Downloading ngrok: 58%\n",
+      "Downloading ngrok: 59%\n",
+      "Downloading ngrok: 60%\n",
+      "Downloading ngrok: 61%\n",
+      "Downloading ngrok: 62%\n",
+      "Downloading ngrok: 63%\n",
+      "Downloading ngrok: 64%\n",
+      "Downloading ngrok: 65%\n",
+      "Downloading ngrok: 66%\n",
+      "Downloading ngrok: 67%\n",
+      "Downloading ngrok: 68%\n",
+      "Downloading ngrok: 69%\n",
+      "Downloading ngrok: 70%\n",
+      "Downloading ngrok: 71%\n",
+      "Downloading ngrok: 72%\n",
+      "Downloading ngrok: 73%\n",
+      "Downloading ngrok: 74%\n",
+      "Downloading ngrok: 75%\n",
+      "Downloading ngrok: 76%\n",
+      "Downloading ngrok: 77%\n",
+      "Downloading ngrok: 78%\n",
+      "Downloading ngrok: 79%\n",
+      "Downloading ngrok: 80%\n",
+      "Downloading ngrok: 81%\n",
+      "Downloading ngrok: 82%\n",
+      "Downloading ngrok: 83%\n",
+      "Downloading ngrok: 84%\n",
+      "Downloading ngrok: 85%\n",
+      "Downloading ngrok: 86%\n",
+      "Downloading ngrok: 87%\n",
+      "Downloading ngrok: 88%\n",
+      "Downloading ngrok: 89%\n",
+      "Downloading ngrok: 90%\n",
+      "Downloading ngrok: 91%\n",
+      "Downloading ngrok: 92%\n",
+      "Downloading ngrok: 93%\n",
+      "Downloading ngrok: 94%\n",
+      "Downloading ngrok: 95%\n",
+      "Downloading ngrok: 96%\n",
+      "Downloading ngrok: 97%\n",
+      "Downloading ngrok: 98%\n",
+      "Downloading ngrok: 99%\n",
+      "Downloading ngrok: 100%\n",
+      "                                                                                                    \n",
+      "Installing ngrok ... \n",
+      "                                                                                                    \n",
+      "Authtoken saved to configuration file: C:\\Users\\hrsht\\AppData\\Local/ngrok/ngrok.yml\n"
      ]
     }
    ],
@@ -615,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +735,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyngrok import ngrok\n",
+    "url = ngrok.connect(port=8501)\n",
+    "url"
+   ]
   }
  ],
  "metadata": {
